--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="hero">
         <h1 class="hero-title">Welcome to My Portfolio</h1>
         <div class="hero-content">
-            <img src="images/profile-pic.jpg" alt="Picture" class="profile-img" loading="lazy">
+            <img src="images/profile-pic2.jpg" alt="Picture" class="profile-img" loading="lazy">
             <h1>Deniz Karabekir</h1>
             <h2 class="write" data-period="2000" data-type='["|| Finance Student ||", "|| Aspiring Programmer ||", "|| Enthusiast of Learning and Innovation ||"]'></h2>
         </div>
