--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="hero">
         <h1 class="hero-title">Welcome to My Portfolio</h1>
         <div class="hero-content">
-            <img src="images/profile-pic2.jpg" alt="Picture" class="profile-img" loading="lazy">
+            <img src="images/profile-pic2.jpg" alt="Picture" class="profile-img">
             <h1>Deniz Karabekir</h1>
             <h2 class="write" data-period="2000" data-type='["|| Finance Student ||", "|| Aspiring Programmer ||", "|| Enthusiast of Learning and Innovation ||"]'></h2>
         </div>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="about-image">
-                <img src="images/illustration.webp" alt="illustration" loading="lazy">
+                <img src="images/illustration.webp" alt="illustration">
             </div>
         </div>
     </section>
@@ -79,13 +79,13 @@
                 <button class="prev">&#10094;</button>
                 <div class="carousel">
                     <div class="carousel-slide">
-                        <img src="images/Fundamentals.webp" alt="Certificate 1" loading="lazy">
-                        <img src="images/Advanced.webp" alt="Certificate 2" loading="lazy">
-                        <img src="images/OOP.webp" alt="Certificate 3" loading="lazy">
-                        <img src="images/HTML & CSS.webp" alt="Certificate 4" loading="lazy">
-                        <img src="images/JS Front end.webp" alt="Certificate 5" loading="lazy">
-                        <img src="images/Algorithms.webp" alt="Certificate 6" loading="lazy">
-                        <img src="images/PostgreSQL.webp" alt="Certificate 7" loading="lazy">
+                        <img src="images/Fundamentals.webp" alt="Certificate 1">
+                        <img src="images/Advanced.webp" alt="Certificate 2">
+                        <img src="images/OOP.webp" alt="Certificate 3">
+                        <img src="images/HTML & CSS.webp" alt="Certificate 4">
+                        <img src="images/JS Front end.webp" alt="Certificate 5">
+                        <img src="images/Algorithms.webp" alt="Certificate 6">
+                        <img src="images/PostgreSQL.webp" alt="Certificate 7">
                         <!-- <img src="" alt="Certificate 8"> -->
                     </div>
                 </div>
@@ -98,15 +98,15 @@
         <div class="info">
             <div class="contact-row">
                 <div class="contact-item" onclick="copyEmail()">
-                    <img src="images/gmail logo.webp" alt="Gmail" loading="lazy">
+                    <img src="images/gmail logo.webp" alt="Gmail">
                 </div>
 
                 <div class="contact-item" onclick="window.open('https://github.com/Denkutu','_blank');">
-                    <img src="images/GitHub-Logo.webp" alt="GitHub" loading="lazy">
+                    <img src="images/GitHub-Logo.webp" alt="GitHub">
                 </div>
 
                 <div class="contact-item" onclick="window.open('https://www.linkedin.com/in/deniz-karabekir-186145352','_blank');">
-                    <img src="images/LinkedIn_logo_initials.png.webp" alt="LinkedIn" loading="lazy">
+                    <img src="images/LinkedIn_logo_initials.png.webp" alt="LinkedIn">
                 </div>
             </div>
 
