--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>My CV</h2>
 
         <div class="cv-buttons">
-            <a href="cv-bg.pdf" class="cv-button" download>📄 Download CV (Bulgarian)</a>
+            <a href="cvs/CV-BG.pdf" class="cv-button" download>📄 Download CV (Bulgarian)</a>
             <a href="cv-en.pdf" class="cv-button" download>📄 Download CV (English)</a>
         </div>
 
