--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
             <a href="#home">
-                <img class="logo" src="images/Logo.webp" loading="lazy" alt="logo"><a href="#home">
+                <img class="logo" src="images/CV_photo.jpg" loading="lazy" alt="logo"><a href="#home">
             </a>
         </nav>
     </header>
