--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
             <a href="#home">
-                <img class="logo" src="images/CV_photo.jpg" loading="lazy" alt="logo"><a href="#home">
+                <img class="logo" src="images/Logo.webp" loading="lazy" alt="logo"><a href="#home">
             </a>
         </nav>
     </header>
@@ -40,7 +40,7 @@
     <section class="hero">
         <h1 class="hero-title">Welcome to My Portfolio</h1>
         <div class="hero-content">
-            <img src="images/profile-pic3.jpg" alt="Picture" class="profile-img">
+            <img src="images/CV_photo.jpg" alt="Picture" class="profile-img">
             <h1>Deniz Karabekir</h1>
             <h2 class="write" data-period="2000" data-type='["|| Finance Student ||", "|| Aspiring Programmer ||", "|| Enthusiast of Learning and Innovation ||"]'></h2>
         </div>
