--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                         <img src="images/JS Front end.webp" alt="Certificate 5">
                         <img src="images/Algorithms.webp" alt="Certificate 6">
                         <img src="images/PostgreSQL.webp" alt="Certificate 7">
-                        <!-- <img src="" alt="Certificate 8"> -->
+                        <img src="images/PythonORM.webp" alt="Certificate 8">
+                        <!-- <img src="" alt="Certificate 9"> -->
                     </div>
                 </div>
                 <button class="next">&#10095;</button>
