--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <meta name="google-site-verification" content="nmDFRpDc-el2kdm_iVSfrS9yUU8zQqdBmP1cypwq3wk" />
 
     <!-- <meta property="og:title" content=Deniz Karabekir - Portfolio>
     <meta property="og:description" content="Check out my portfolio!">
     <meta property="og:image" content="images/">
     <meta property="og:url" content="https://mywebsite.com"> -->
+    
 </head>
 
 <body>
