--- a/index.html
+++ b/index.html
@@ -5,22 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Deniz Karabekir - Portfolio showcasing my portfolio, certifications, and skills.">
-    <meta name="keywords" content="developer, programming, portfolio, web development, finance, construction, echnician, cv, ">
+    <meta name="description" content="Professional web developer and designer. View my portfolio and projects. Contact for services.">
+    <meta name="keywords" content="web development, portfolio, HTML, CSS, JavaScript, design, developer, projects">
+    <meta name="robots" content="index, follow">
     <meta name="author" content="Deniz Karabekir">
+
+    <!-- Open Graph meta tags (for social media sharing) -->
+    <meta property="og:title" content="Deniz Karabekir - Portfolio">
+    <meta property="og:description" content="Professional web developer and designer. View my portfolio and projects. Contact for services.">
+    <meta property="og:image" content="https://denkutu.github.io/MyPortfolio/#home">
+    <meta property="og:url" content="https://denkutu.github.io/MyPortfolio">
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Deniz Karabekir">
+    <meta name="twitter:description" content="Professional web developer and designer. View my portfolio and projects. Contact for services.">
+    <meta name="twitter:image" content="https://denkutu.github.io/MyPortfolio/#home">
+
+    <meta property="og:title" content="Deniz Karabekir - Portfolio">
+    <meta property="og:description" content="Check out my portfolio!">
+    <meta property="og:image" content="https://denkutu.github.io/MyPortfolio/#home">
+    <meta property="og:url" content="https://denkutu.github.io/MyPortfolio/#home">
+    
+    <meta name="google-site-verification" content="nmDFRpDc-el2kdm_iVSfrS9yUU8zQqdBmP1cypwq3wk" />
+    <link rel="sitemap" type="application/xml" href="https://denkutu.github.io/MyPortfolio/sitemap.xml">
+
     <title>Deniz Karabekir</title>
 
     <link rel="stylesheet" href="styles/style.css">
-
-
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <meta name="google-site-verification" content="nmDFRpDc-el2kdm_iVSfrS9yUU8zQqdBmP1cypwq3wk" />
 
-    <!-- <meta property="og:title" content=Deniz Karabekir - Portfolio>
-    <meta property="og:description" content="Check out my portfolio!">
-    <meta property="og:image" content="images/">
-    <meta property="og:url" content="https://mywebsite.com"> -->
-    
 </head>
 
 <body>
@@ -34,7 +48,7 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
             <a href="#home">
-                <img class="logo" src="images/Logo.webp" loading="lazy" alt="logo"><a href="#home">
+                <img class="logo" src="images/Logo.webp" loading="lazy" alt="Web development portfolio showcasing HTML, CSS, and JavaScript projects"><a href="#home">
             </a>
         </nav>
     </header>
@@ -42,7 +56,7 @@
     <section class="hero">
         <h1 class="hero-title">Welcome to My Portfolio</h1>
         <div class="hero-content">
-            <img src="images/CV_photo.jpg" alt="Picture" class="profile-img">
+            <img src="images/CV_photo.jpg" alt="Web development portfolio showcasing HTML, CSS, and JavaScript projects" class="profile-img">
             <h1>Deniz Karabekir</h1>
             <h2 class="write" data-period="2000" data-type='["|| Finance Student ||", "|| Aspiring Programmer ||", "|| Enthusiast of Learning and Innovation ||"]'></h2>
         </div>
