--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
-    <title>Deniz Karabekir | Web Developer Portfolio</title>
+    <title>Deniz Karabekir</title>
     <meta name="description" content="Official portfolio of Deniz Karabekir - a passionate web developer showcasing projects, certificates, and contact information." />
     <meta name="keywords" content="Deniz Karabekir, Web Developer, Portfolio, HTML, CSS, JavaScript, GitHub, Projects" />
     <meta name="author" content="Deniz Karabekir" />
